--- a/app/src/main/res/layout/activity_highscore.xml
+++ b/app/src/main/res/layout/activity_highscore.xml
@@ -7,11 +7,38 @@
     tools:context=".activities.activity_highscore">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/hs_recyclerView"
+        android:layout_width="319dp"
+        android:layout_height="577dp"
+        android:clipToPadding="false"
+        android:orientation="vertical"
+        android:paddingStart="0dp"
+        android:paddingTop="10dp"
+        android:paddingEnd="0dp"
+        android:paddingBottom="10dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/hs_user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="Bruger"
+        app:layout_constraintBottom_toTopOf="@+id/hs_recyclerView"
+        app:layout_constraintStart_toStartOf="@+id/hs_recyclerView" />
+
+    <TextView
+        android:id="@+id/hs_guess"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="Antal Gæt"
+        app:layout_constraintBottom_toTopOf="@+id/hs_recyclerView"
+        app:layout_constraintEnd_toEndOf="@+id/hs_recyclerView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
