--- a/app/src/main/res/layout/highscore_container.xml
+++ b/app/src/main/res/layout/highscore_container.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
+    android:layout_marginStart="0dp"
+    android:layout_marginEnd="0dp"
+    android:layout_marginBottom="10dp"
     app:cardCornerRadius="4dp"
     app:cardElevation="4dp"
     >
@@ -12,28 +13,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:orientation="horizontal"
+        android:background="#2C2C2C"
+        android:padding="5dp">
 
-            <TextView
-                android:id="@+id/hs_user"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:textSize="35sp"
-                android:textStyle="bold"/>
-            <TextView
-                android:id="@+id/hs_number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
-                android:textSize="35sp"
-                android:textStyle="bold"
-                />
+        <TextView
+            android:id="@+id/hs_user"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:textColor="#000"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
-
-
-
+        <TextView
+            android:id="@+id/hs_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            />
     </LinearLayout>
 
 
