--- a/app/src/main/res/layout/activity_won.xml
+++ b/app/src/main/res/layout/activity_won.xml
@@ -9,6 +9,12 @@
     tools:deviceIds="wear">
 
 
+    <nl.dionsegijn.konfetti.KonfettiView
+        android:id="@+id/viewKonfetti"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
@@ -17,6 +23,7 @@
         android:text="Tillykke du vandt!"
         android:textSize="40sp"
         android:textStyle="bold"
+        android:background="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,6 +36,7 @@
         android:gravity="center"
         android:text="Du gættede det rigtige ord på\nantal forsøg"
         android:textSize="20sp"
+        android:background="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text" />
