--- a/app/src/main/res/layout/activity_won.xml
+++ b/app/src/main/res/layout/activity_won.xml
@@ -60,6 +60,7 @@
         android:textColor="#FF8E13"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:background="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
